添加签名，九宫格，文本，徽章，视频

--- a/src/components/hc-swiper/hc-swiper.scss
+++ b/src/components/hc-swiper/hc-swiper.scss
@@ -19,13 +19,22 @@
       display:inline-block;
       width:1rem;
       height:0.2rem;
-      background:rgba(255,255,255,0.4);
+      background:var(--bg-white);
+      opacity:0.4;
       margin: 0.5rem 0.2rem;
       border-radius:0.2rem;
       font-size:0;
       &.active{
-        background:#fff;
+        opacity:1;
       }
+    }
+  }
+}
+:host([indicate="light"]){
+  .indicate{
+    span{
+      margin-bottom:0;
+      background:var(--bg-dark);
     }
   }
 }
