--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -44,6 +44,7 @@ html {
   --bg-white: #fff;
   --bg-light:#F7F7F7;
   --bg-gray: #DFDFDF;
+  --bg-dark: #808080;
   --bg-black-transparent: rgba(0,0,0,0.7);
   --bg-white-transparent: rgba(255,255,255,0.7);
   --bg-lightgray: #fbfbfb;
