--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -222,3 +222,11 @@ $--app-indexbar-indicate-background: var(--bg-light);
 $--app-indexbar-item-fontsize: 0.75rem;
 $--app-indexbar-item-color: var(--color-dark);
 $--app-indexbar-line: var(--border-default);
+// text
+$--app-text-fontsize: 0.75rem;
+$--app-text-color: var(--color-dark);
+$--app-text-more-color: var(--color-primary);
+// badge
+$--app-badge-color: var(--color-white);
+$--app-badge-background: var(--color-danger);
+$--app-badge-fontsize: 0.6rem;
