--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -233,3 +233,10 @@ $--app-badge-fontsize: 0.6rem;
 // video
 $--app-video-fontsize: 0.6rem;
 $--app-video-color: var(--color-dark);
+// keyboard
+$--app-keyboard-background: var(--bg-light);
+$--app-keyboard-key-color: var(--bg-white);
+$--app-keyboard-fontsize:0.7rem;
+$--app-keyboard-color: var(--color-dark);
+$--app-keyboard-active: var(--bg-lightgray);
+$--app-keyboard-height: 11rem;
