--- a/src/components/hc-badge/hc-badge.scss
+++ b/src/components/hc-badge/hc-badge.scss
@@ -1,6 +1,7 @@
 :host {
   display: inline-block;
   position: relative;
+  vertical-align: middle;
   .number{
     position: absolute;
     font-size: $--app-badge-fontsize;
