--- a/src/components/hc-cell/hc-cell.scss
+++ b/src/components/hc-cell/hc-cell.scss
@@ -10,10 +10,11 @@
     margin-right:$--app-cell-size / 2;
   }
   .label{
-    flex:1;
     color: $--app-cell-label-color;
+    margin-right: $--app-cell-size * 2;
   }
   .value{
     color:$--app-cell-value-color;
+    flex:1;
   }
 }
