--- a/src/components/hc-checkbox/hc-checkbox.scss
+++ b/src/components/hc-checkbox/hc-checkbox.scss
@@ -4,7 +4,8 @@
   font-size:$--app-checkbox-size;
   color: $--app-checkbox-color;
   align-items:center;
-  margin-right:0.5rem;
+  margin-right:$--app-checkbox-size * 0.5;
+  position: relative;
   .frame{
     display:flex;
     flex-direction: row;
@@ -14,18 +15,20 @@
     height: $--app-checkbox-size * 1.4;
     color:$--app-checkbox-background;
     background: $--app-checkbox-background;
-    margin-right:0.4rem;
+    margin-right:$--app-checkbox-size * 0.3;
     overflow:hidden;
     transition:0.3s;
     border:1px solid $--app-checkbox-border;
-    slot{
+    box-sizing: border-box;
+    overflow:hidden;
+    hc-icon{
       display:inline-block;
       font-size:0;
       transform: scale(0);
       transition:0.3s;
     }
   }
-  slot{
+  .label{
     display:block;
     font-size:inherit;
     color:inherit;
@@ -46,7 +49,7 @@
   .frame{
     background: $--app-checkbox-active;
     border-color:$--app-checkbox-active;
-    slot{
+    hc-icon{
       transform: scale(1);
     }
   }
@@ -74,5 +77,18 @@
   display:flex;
 }
 :host([vertical]){
-  margin:0 0 0.5rem 0;
+  padding:$--app-checkbox-size * 0.7 0;
+}
+:host([subline]){
+  &:after{
+    content:"";
+    display:inline-block;
+    position: absolute;
+    left:0;
+    bottom:0;
+    width:100%;
+    height:1px;
+    background:$--app-checkbox-line;
+    transform: scaleY(0.5);
+  }
 }
