--- a/src/components/hc-form-item/hc-form-item.scss
+++ b/src/components/hc-form-item/hc-form-item.scss
@@ -8,6 +8,7 @@
   .label{
     font-size:inherit;
     font-weight: normal;
+    line-height:1.6;
     margin:0;
     color:$--app-form-label-color;
   }
