--- a/src/components/hc-list-item/hc-list-item.scss
+++ b/src/components/hc-list-item/hc-list-item.scss
@@ -11,7 +11,7 @@
   }
   .content{
     flex:1;
-    .heading {
+    .head {
       font-size: $--app-list-heading-size;
       color: $--app-list-heading-color;
       display: -webkit-box;
