--- a/src/components/hc-slider/hc-slider.scss
+++ b/src/components/hc-slider/hc-slider.scss
@@ -21,7 +21,7 @@
       display:flex;
       width: $--app-slider-height * 1.4;
       height: $--app-slider-height * 1.4;
-      background:var(--bg-white);
+      background:var(--background-color-white);
       border:0.1rem solid $--app-slider-active-background;
       border-radius:50%;
       position: absolute;
