--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -45,7 +45,7 @@ $--app-list-heading-color: var(--color-text-primary);
 $--app-list-append-color: var(--color-text-regular);
 $--app-list-heading-ellipsis: 2;
 $--app-list-line: var(--border-color-base);
-$--app-list-padding: var(--padding-default);
+$--app-list-padding: 0.8rem;
 $--app-list-small-padding: 0.7rem;
 $--app-list-mini-padding: 0.5rem;
 $--app-list-date-size: 0.6rem;
