--- a/src/components/hc-swiper/hc-swiper.scss
+++ b/src/components/hc-swiper/hc-swiper.scss
@@ -19,7 +19,7 @@
       display:inline-block;
       width:1rem;
       height:0.2rem;
-      background:var(--bg-white);
+      background:var(--background-color-white);
       opacity:0.4;
       margin: 0.5rem 0.2rem;
       border-radius:0.2rem;
@@ -34,7 +34,7 @@
   .indicate{
     span{
       margin-bottom:0;
-      background:var(--bg-dark);
+      background:var(--background-color-darker);
     }
   }
 }
