--- a/src/components/hc-toast/hc-toast.scss
+++ b/src/components/hc-toast/hc-toast.scss
@@ -33,17 +33,17 @@
   opacity:1;
   z-index:100;
 }
-:host([place="start"]){
+:host([place="up"]){
   top:5%;
   transform: translate(-50%,200%) scale(0.9);
 }
-:host([place="start"][display]){
+:host([place="up"][display]){
   transform: translate(-50%,100%) scale(1);
 }
-:host([place="end"]){
+:host([place="down"]){
   top:95%;
   transform: translate(-50%,0) scale(0.9);
 }
-:host([place="end"][display]){
+:host([place="down"][display]){
   transform: translate(-50%,-100%) scale(1);
 }
