--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -254,3 +254,4 @@ $--app-calendar-color: var(--color-text-primary);
 $--app-calendar-color1: var(--color-text-placeholder);
 $--app-calendar-basecolor: var(--color-primary);
 $--app-calendar-placeholder: var(--color-text-placeholder);
+$--app-calendar-select: var(--color-primary-light);
