--- a/src/components/hc-calendar-month/hc-calendar-month.scss
+++ b/src/components/hc-calendar-month/hc-calendar-month.scss
@@ -10,9 +10,19 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    font-size: $--app-calendar-fontsize * 4;
+    font-size: $--app-calendar-fontsize * 7;
     color: $--app-calendar-placeholder;
     z-index:1;
+  }
+  .title{
+    font-size:$--app-calendar-fontsize * 1.1;
+    color: $--app-calendar-color;
+    font-weight: normal;
+    margin:0.5rem 0;
+    text-align:center;
+    &.hide{
+      font-size:0;
+    }
   }
 }
 :host([range]){
