--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -234,7 +234,7 @@ $--app-badge-background: var(--color-danger);
 $--app-badge-fontsize: 0.6rem;
 // video
 $--app-video-fontsize: 0.6rem;
-$--app-video-color: var(--color-text-primary);
+$--app-video-color: var(--color-text-white);
 // keyboard
 $--app-keyboard-background: var(--background-color-base);
 $--app-keyboard-key-color: var(--background-color-white);
