--- a/src/components/hc-video-controls/hc-video-controls.scss
+++ b/src/components/hc-video-controls/hc-video-controls.scss
@@ -2,7 +2,7 @@
   display: block;
   font-size: $--app-video-fontsize;
   color: $--app-video-color;
-  .time{
-
-  }
+  background: rgba(0,0,0,0.5);
+  padding:0.2rem 0.5rem;
+  box-sizing: border-box;
 }
