--- a/src/components/hc-alert/hc-alert.scss
+++ b/src/components/hc-alert/hc-alert.scss
@@ -48,28 +48,28 @@
 }
 :host([type="slideInDown"]){
   transform: translate3d(-50%,-100%, 0) scale(1);
-  top:40%;
+  top:50%;
 }
 :host([type="slideInUp"]){
-  transform: translate3d(-50%,100%, 0) scale(1);
+  transform: translate3d(-50%,0, 0) scale(1);
   top:50%;
 }
 :host([type="fadeInDown"]){
   transform: translate3d(-50%,-100%, 0) scale(1);
-  top:40;
+  top:50;
   opacity:0;
 }
 :host([type="fadeInUp"]){
-  transform: translate3d(-50%,100%, 0) scale(1);
+  transform: translate3d(-50%,0%, 0) scale(1);
   top:50%;
   opacity:0;
 }
 :host([type="zoomInDown"]){
   transform: translate3d(-50%,-100%, 0) scale(0.7);
-  top:40%;
+  top:50%;
 }
 :host([type="zoomInUp"]){
-  transform: translate3d(-50%,100%, 0) scale(0.7);
+  transform: translate3d(-50%,0, 0) scale(0.7);
   top:50%;
 }
 :host([type="fadeIn"]){
