finish pullrefresh :fire:

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -253,3 +253,8 @@ $--app-calendar-color1: var(--color-text-placeholder);
 $--app-calendar-basecolor: var(--color-primary);
 $--app-calendar-placeholder: var(--color-text-placeholder);
 $--app-calendar-select: var(--color-primary-light);
+
+// pullrefresh
+$--app-pullrefresh-fontsize: 0.7rem;
+$--app-pullrefresh-color: var(--color-text-primary);
+$--app-pullrefresh-background: var(--background-color-darke);
