--- a/src/components/hc-pullrefresh/hc-pullrefresh.scss
+++ b/src/components/hc-pullrefresh/hc-pullrefresh.scss
@@ -3,6 +3,7 @@
   height:100%;
   position: relative;
   overflow:hidden;
+  background:$--app-pullrefresh-background;
   .mask{
     position: absolute;
     top:0;
@@ -13,6 +14,24 @@
   }
   .content{
     height:100%;
-    overflow: scroll;
+    background:var(--background-color-white);
+    .up{
+      position: absolute;
+      top:0;
+      left:0;
+      width:100%;
+      transform: translate(0, -100%);
+    }
+    .scroll{
+      height:100%;
+      overflow: scroll;
+    }
+    .down{
+      position: absolute;
+      bottom:0;
+      left:0;
+      width:100%;
+      transform: translate(0, 100%);
+    }
   }
 }
