--- a/src/components/hc-masker/hc-masker.scss
+++ b/src/components/hc-masker/hc-masker.scss
@@ -1,5 +1,8 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
   position: fixed;
   top:0;
   left:0;
